# stream-cause

./: .clang-format  .gitignore  CMakeLists.txt  README.md  lob.py  vcpkg.json
analysis/: utils.py
config/: default.json  spy18_allstock.json  test_3stock.json  test_allstock.json
data/: spy18_id_map.json  test_20251201_allstock_id_map.json
output/causal_graph_analysis/: mean_alpha_IS.csv  mean_alpha_OOS.csv  mean_alpha_diff.csv  per_inst_summary.csv  report.txt  top_edges.csv
output/mm_backtest/: backtest_curve.csv  backtest_per_inst.csv  backtest_summary.csv
output/mm_backtest_multiday/: calibrated_k.csv  per_day.csv  per_inst.csv  per_inst_bootstrap.csv  significance.csv  summary.csv  tc_sweep.csv  threshold_sweep.csv
output/mm_backtest_precise/: day_results.csv
output/mm_backtest_precise_spy18/: day_results.csv
output/mm_backtest_spy18/: calibrated_k.csv  per_day.csv  per_inst.csv  per_inst_bootstrap.csv  significance.csv  summary.csv  tc_sweep.csv  threshold_sweep.csv
output/mm_validation/: exp1_intensity_forecast.csv  exp2_adverse_selection.csv  exp3_cross_stock.csv  exp4_structural_breaks.csv
scripts/: analyze_causal_graph.py  backtest_lob_precise.py  backtest_multiday.py  preprocess_lob.py  preprocess_lob_multiday.py  preprocess_test_day.py  preprocess_trades_multiday.py  run_backtest_only.sh  run_backtest_precise.sh  run_causal_analysis.sh  run_pipeline_all_days.py  run_steps34b.sh  spy18_1_preprocess_trades.sh  spy18_2_preprocess_lob.sh  spy18_3_pipeline.sh  spy18_4_calibrate.sh  spy18_5_backtest.sh  validate_causal_returns.py  validate_market_maker.py
src/: lob.py  main.cpp
src/causal/: ci_test.cpp  ci_test.hpp  graph_store.cpp  graph_store.hpp  pag.cpp  pag.hpp  ts_fci.cpp  ts_fci.hpp
src/changepoint/: bocpd.cpp  bocpd.hpp  cusum.cpp  cusum.hpp
src/hawkes/: em_estimator.cpp  em_estimator.hpp  hawkes_pair.cpp  hawkes_pair.hpp  intensity_tracker.cpp  intensity_tracker.hpp  rolling_window.cpp  rolling_window.hpp
src/ingestion/: databento_client.cpp  databento_client.hpp  event_router.cpp  event_router.hpp  file_replay.cpp  file_replay.hpp  market_event.cpp  market_event.hpp  ring_buffer.hpp
src/pipeline/: pipeline.cpp  pipeline.hpp  thread_pool.cpp  thread_pool.hpp
tests/: CMakeLists.txt  test_bocpd.cpp  test_ci_test.cpp  test_cusum.cpp  test_hawkes_em.cpp  test_ring_buffer.cpp  test_ts_fci.cpp
